HOM-5 update swagger
